# diesel-autoincrement-new-struct

./: Cargo.toml  README.md
src/: lib.rs
