[package]
name = "diesel-autoincrement-new-struct"
version = "0.1.0"
authors = ["Jade Iqbal <jadeiqbal@fastmail.com>"]
edition = "2021"

documentation = "https://docs.rs/diesel_autoincrement_new_struct"
homepage = "https://crates.io/crates/diesel_autoincrement_new_struct"
repository = "https://github.com/LGUG2Z/diesel-autoincrement-new-struct"

description = "Generate NewStructs for all your tables with autoincrementing IDs"
keywords = ["database", "orm", "diesel", "macro", "macro_rules"]

license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1"

[dev-dependencies]
diesel = { version = "2.0.0-rc.1", features = ["sqlite"] }